# AOC

./: README.md
2019/: Cargo.toml
2019/day_01/: Cargo.toml
2019/day_01/src/: main.rs
2019/day_02/: Cargo.toml
2019/day_02/src/: main.rs
2019/day_03/: Cargo.toml
2019/day_03/src/: main.rs
2019/day_04/: Cargo.toml
2019/day_04/src/: main.rs
2019/day_05/: Cargo.toml
2019/day_05/src/: main.rs  main.rs.sav  main.rs.sav2
2019/day_06/: Cargo.toml
2019/day_07/: Cargo.toml
2019/day_07/src/: main.rs
2019/day_08/: Cargo.toml
2019/day_08/src/: main.rs
2019/day_09/: Cargo.toml
2019/day_09/src/: main.rs
2019/day_10/: Cargo.toml
2019/day_10/src/: main.rs
2019/day_11/: Cargo.toml
2019/day_12/: Cargo.toml
2019/day_12/src/: main.rs
2019/day_13/: Cargo.toml
2019/day_14/: Cargo.toml
2019/day_14/src/: main.rs
2019/day_15/: Cargo.toml  input-actual
2019/day_16/: Cargo.toml
2019/day_17/: Cargo.toml
2020/: Cargo.toml
2020/day_01/: Cargo.toml
2020/day_01/src/: main.rs
2020/day_02/: Cargo.toml
2020/day_02/src/: main.rs
2020/day_03/: Cargo.toml
2020/day_04/: Cargo.toml
2020/day_05/: Cargo.toml
2020/day_06/: Cargo.toml
2020/day_06/src/: main.rs
2020/day_07/: Cargo.toml  input-actual
2020/day_07/src/: main.rs
2020/day_08/: Cargo.toml
2020/day_09/: Cargo.toml
2020/day_09/src/: main.rs
2020/day_10/: Cargo.toml
2020/day_11/: Cargo.toml
2020/day_11/src/: main.rs
2020/day_12/: Cargo.toml
2020/day_13/: Cargo.toml
2020/day_13/src/: main.rs
2020/day_14/: Cargo.toml
2020/day_14/src/: main.rs
2020/day_15/: Cargo.toml
2020/day_16/: Cargo.toml
2020/day_16/src/: main.rs
2020/day_17/: Cargo.toml
2020/day_18/: Cargo.toml
2020/day_18/src/: main.rs
2020/day_19/: Cargo.toml
2020/day_20/: Cargo.toml
2020/day_20/src/: main.rs
2020/day_21/: Cargo.toml
2020/day_21/src/: main.rs
2020/day_22/: Cargo.toml
2020/day_22/src/: main.rs
2020/day_23/: Cargo.toml
2020/day_23/src/: main.rs
2020/day_24/: Cargo.toml
2020/day_25/: Cargo.toml
2021/: Cargo.toml
2021/day_01/: Cargo.toml
2021/day_01/src/: main.rs
2021/day_02/: Cargo.toml
2021/day_03/: Cargo.toml
2021/day_04/: Cargo.toml  input-example
2021/day_04/src/: main.rs
2021/day_05/: Cargo.toml
2021/day_06/: Cargo.toml
2021/day_07/: Cargo.toml
2021/day_08/: Cargo.toml
2021/day_08/src/: main.rs
2021/day_09/: Cargo.toml
2021/day_10/: Cargo.toml
2021/day_11/: Cargo.toml
2021/day_12/: Cargo.toml
2021/day_13/: Cargo.toml
2021/day_14/: Cargo.toml
2021/day_15/: Cargo.toml
2021/day_16/: Cargo.toml
2021/day_17/: Cargo.toml
2021/day_18/: Cargo.toml
2021/day_19/: Cargo.toml
2021/day_20/: Cargo.toml
2021/day_21/: Cargo.toml
2021/day_22/: Cargo.toml
2021/day_23/: Cargo.toml  xx
2022/: Cargo.toml  runall.sh
2022/day_01/: Cargo.toml
2022/day_01/src/: main.rs
2022/day_02/: Cargo.toml
2022/day_02/src/: main.rs
2022/day_03/: Cargo.toml
2022/day_03/src/: main.rs
2022/day_04/: Cargo.toml
2022/day_04/src/: main.rs
2022/day_05/: Cargo.toml
2022/day_05/src/: main.rs
2022/day_06/: Cargo.toml
2022/day_06/src/: main.rs
2022/day_07/: Cargo.toml
2022/day_07/src/: main.rs
2022/day_08/: Cargo.toml
2022/day_08/src/: main.rs
2022/day_09/: Cargo.toml
2022/day_09/src/: main.rs
2022/day_10/: Cargo.toml
2022/day_10/src/: main.rs
2022/day_11/: Cargo.toml
2022/day_11/src/: main.rs
2022/day_12/: Cargo.toml
2022/day_12/src/: main.rs
2022/day_13/: Cargo.toml
2022/day_13/src/: main.rs
2022/day_14/: Cargo.toml
2022/day_14/src/: main.rs
2022/day_15/: Cargo.toml
2022/day_15/src/: main.rs
2022/day_16/: Cargo.toml
2022/day_16.sav/: t.py  t2.py
2022/day_16.sav/src/: main.rs  main.rs.floyd  main.rs.golden  main.rs.golden2  main.rs.python
2022/day_16/src/: main.rs
2022/day_17/: Cargo.toml
2022/day_17/src/: main.rs
2022/day_18/: Cargo.toml
2022/day_18/src/: main.rs
2022/day_19/: Cargo.toml
2022/day_19/src/: main.rs
2022/day_20/: Cargo.toml  advent-prelude.noul
2022/day_20/src/: main.rs
2022/day_21/: Cargo.toml
2022/day_21/src/: main.rs
2022/day_22/: Cargo.toml
2022/day_22.sav/: Cargo.toml  tst
2022/day_22.sav/src/: main.rs  main.rs.sav
2022/day_22/src/: main.rs
2022/day_23/: Cargo.toml
2022/day_23/src/: main.rs
2022/day_24/: Cargo.toml
2022/day_24/src/: main.rs
2022/day_25/: Cargo.toml
2022/day_25/src/: main.rs
2022/general/src/: lib.rs
2023/: Cargo.toml  runall.sh
2024/: Cargo.toml  runall.sh
2024/day_01/: Cargo.toml  input-actual
2024/day_01/src/: main.rs
2024/day_02/: Cargo.toml  input-actual
2024/day_02/src/: main.rs
2024/day_03/: Cargo.toml  input-actual
2024/day_03/src/: main.rs
2024/day_04/: Cargo.toml  input-actual  input-example2
2024/day_04/src/: main.rs
2024/day_05/: Cargo.toml  input-actual
2024/day_05/src/: main.rs
2024/day_06/: Cargo.toml  input-actual
2024/day_06/src/: main.rs
2024/day_07/: Cargo.toml  input-actual
2024/day_07/src/: main.rs
2024/day_08/: Cargo.toml  input-actual  input-example2
2024/day_08/src/: main.rs
2024/day_09/: Cargo.toml
2024/day_09/src/: main.rs
2024/day_10/: Cargo.toml  input-actual  input-example  input-example2  input-example3  input-example4
2024/day_10/src/: main.rs
2024/day_11/: Cargo.toml  input-actual
2024/day_11/src/: main.rs
2024/day_12/: Cargo.toml  input-actual  input-example  input-example2  input-example3  input-example4  input-example5
2024/day_12/src/: main.rs
2024/day_13/: Cargo.toml  input-actual
2024/day_13/src/: main.rs
2024/day_14/: Cargo.toml  input-actual
2024/day_14/src/: main.rs
2024/day_15/: Cargo.toml  input-actual  input-example
2024/day_15/src/: .main.rs.swp  main.rs
2024/day_16/: Cargo.toml  input-actual  input-example  input-example2
2024/day_16/src/: main.rs
2024/day_17/: .what.swp  Cargo.toml  Notes  input-actual
2024/day_17/src/: main.rs
2024/day_18/: Cargo.toml  input-actual
2024/day_18/src/: main.rs
2024/day_19/: Cargo.toml  input-actual
2024/day_19/src/: main.rs
general/: Cargo.toml
(+97 files in other folders)
