[workspace]
resolver = "2"

members = [
    # binaries
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
    "day_08",
    "day_09",
    "day_10",
    "day_11",
    "day_12",
    "day_13",
    "day_14",
#   "day_15",
#   "day_16",
#   "day_17",
#   "day_18",
#   "day_19",
#   "day_20",
#   "day_21",
#   "day_22",
#   "day_23",
#   "day_24",
#   "day_25",
]

[workspace.dependencies]
general = { path = "../general" }
itertools = "0.13"
json = "0.12"
lazy_static = "1.5"
ndarray = "0.16"
num = "0.4"
num-bigint = "0.4"
pathfinding = "4"
regex = "1.11"
