[package]
name = "day_05"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Sunny with a Chance of Asteroids: https://adventofcode.com/2019/day/5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../../general" }
