[package]
name = "day_07"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Amplification Circuit: https://adventofcode.com/2019/day/7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { workspace = true }
itertools = { workspace = true }
