[package]
name = "day_10"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Monitoring Station: https://adventofcode.com/2019/day/10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../../general" }
itertools = "0.10.5"
num-integer = "0.1.45"
