[package]
name = "day_12"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "The N-Body Problem: https://adventofcode.com/2019/day/12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../../general" }
regex = "1.7.1"
num-integer = "0.1.45"
