[package]
name = "day_12"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "The N-Body Problem: https://adventofcode.com/2019/day/12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { workspace = true }
num-integer = { workspace = true }
regex = { workspace = true }
