[package]
name = "day_16"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Ticket Translation: https://adventofcode.com/2020/day/16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { workspace = true }
regex = { workspace = true }
