[package]
name = "day_18"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Operation Order: https://adventofcode.com/2020/day/18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../../general" }
