[package]
name = "day_20"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Jurassic Jigsaw: https://adventofcode.com/2020/day/20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
