[package]
name = "day_08"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
description = "Seven Segment Search: https://adventofcode.com/2021/day/8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.7"
general = { path = "../../general" }
itertools = "0.10.5"
